feat: win by docking cristal in harbour

--- a/Assets/ChristmasLearningProject/Tests/Runtime/ChristmasLearningProject.Tests.Runtime.asmdef
+++ b/Assets/ChristmasLearningProject/Tests/Runtime/ChristmasLearningProject.Tests.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "ChristmasLearningProject.Runtime.View"
+        "ChristmasLearningProject.Runtime.View",
+        "Unity.InputSystem"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
