--- a/Assets/ChristmasLearningProject/Runtime/Domain/ChristmasLearningProject.Runtime.Domain.asmdef
+++ b/Assets/ChristmasLearningProject/Runtime/Domain/ChristmasLearningProject.Runtime.Domain.asmdef
@@ -1,11 +1,7 @@
 {
-    "name": "ChristmasLearningProject.Runtime.View",
+    "name": "ChristmasLearningProject.Runtime.Domain",
     "rootNamespace": "",
-    "references": [
-        "GUID:0d8beb7f090555447a6cf5ce9e54dbb4",
-        "GUID:ec2cf124a353ea642a5ee6c3869ac3a1",
-        "GUID:5b9eb281b78aa4144a8c8440b0000b10"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
