test: deploy boats from routes

--- a/Assets/ChristmasLearningProject/Tests/Runtime/ChristmasLearningProject.Tests.Runtime.asmdef
+++ b/Assets/ChristmasLearningProject/Tests/Runtime/ChristmasLearningProject.Tests.Runtime.asmdef
@@ -5,7 +5,8 @@
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "ChristmasLearningProject.Runtime.View",
-        "Unity.InputSystem"
+        "Unity.InputSystem",
+        "ChristmasLearningProject.Runtime.Domain"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
